--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -10,17 +10,10 @@
     tools:context=".MainActivity">
 
 
-    <ImageButton
-        android:id="@+id/menubutton"
-        android:layout_width="84dp"
-        android:layout_height="73dp"
-        android:backgroundTint="#3D7E77"
-        android:scaleType="fitXY"
-        android:src="@drawable/menu"
-        android:layout_gravity="right"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="113dp"
         ></LinearLayout>
     <Button
         android:id="@+id/insert_btn"
@@ -60,7 +53,7 @@
             android:id="@+id/imagebutton1"
             android:src="@drawable/imagebutton1"
             android:scaleType="fitXY"
-            android:backgroundTint="#3D7E77"
+            android:backgroundTint="#903D7E77"
             />
         <ImageButton
             android:layout_width="103dp"
@@ -68,7 +61,7 @@
             android:id="@+id/imagebutton2"
             android:src="@drawable/imagebutton2"
             android:scaleType="fitXY"
-            android:backgroundTint="#3D7E77"
+            android:backgroundTint="#903D7E77"
             />
 
         <ImageButton
@@ -77,7 +70,7 @@
             android:id="@+id/imagebutton3"
             android:src="@drawable/imagebutton3"
             android:scaleType="fitXY"
-            android:backgroundTint="#3D7E77"
+            android:backgroundTint="#903D7E77"
             />
         <ImageButton
             android:layout_width="103dp"
@@ -85,8 +78,7 @@
             android:id="@+id/imagebutton4"
             android:src="@drawable/imagebutton4"
             android:scaleType="fitXY"
-            android:backgroundTint="#3D7E77"
+            android:backgroundTint="#903D7E77"
             />
     </GridLayout>
-
 </LinearLayout>
