--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#CCCCCC"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -22,7 +23,7 @@
 
         <ImageView
             android:id="@+id/item_image"
-            android:background="@color/purple_200"
+            android:background="#F44336"
             android:layout_width="30dp"
             android:layout_height="30dp"/>
     </LinearLayout>
